--- a/package.json
+++ b/package.json
@@ -4,21 +4,40 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.20.1",
+    "@reactivex/rxjs": "^6.6.7",
+    "base-64": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http": "0.0.1-security",
+    "image-to-base64": "^2.2.0",
+    "image-to-uri": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "pkg-dir": "^7.0.0",
     "sequelize": "^6.25.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "cross-env DEBUG=app* nodemon $NODE_DEBUG_OPTION server.js"
+    "dev": "cross-env DEBUG=app* nodemon $NODE_DEBUG_OPTION server.js",
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ManonDerydt/shopispot-back.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/ManonDerydt/shopispot-back/issues"
+  },
+  "homepage": "https://github.com/ManonDerydt/shopispot-back#readme"
 }
